--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,8 @@
 {
-   "version": 2,
-   "builds": [
-     {
-       "src": "build.sh",
-       "use": "@vercel/sh"
-     }
-   ],
-   "routes": [
-     {
-       "src": "/(.*)",
-       "dest": "public/index.html"
-     }
-   ]
+  "builds": [
+    { "src": "package.json", "use": "@vercel/node", "config": { "distDir": "build" } }
+  ],
+  "routes": [
+    { "src": "/", "dest": "build/index.html" }
+  ]
 }
