--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,10 @@
 {
+  "version": 2,
   "builds": [
-    { "src": "package.json", "use": "@vercel/node", "config": { "distDir": "build" } }
+    { "src": "package.json", "use": "@vercel/node" },
+    { "src": "build.sh", "use": "@vercel/static-build" }
   ],
   "routes": [
-    { "src": "/", "dest": "build/index.html" }
+    { "src": "/(.*)", "dest": "/index.html" }
   ]
 }
